--- a/.github/workflows/meta-rauc.yml
+++ b/.github/workflows/meta-rauc.yml
@@ -5,17 +5,27 @@ on:
   pull_request: {}
   workflow_dispatch: {}
 
-
 jobs:
   build:
     name: meta-rauc Build
-    runs-on: ${{ vars.BUILD_RUNS_ON || (github.repository == 'rauc/meta-rauc' && 'ptx-runner') || 'ubuntu-latest' }}
+    #runs-on: ${{ vars.BUILD_RUNS_ON || (github.repository == 'rauc/meta-rauc' && 'ptx-runner') || 'ubuntu-latest' }}
+    runs-on: [self-hosted, forrest, build]
     timeout-minutes: 720
     steps:
       - name: Setup SSH Key for Yocto Cache
         run: |
           echo "${{ secrets.YOCTO_CACHE_KEY }}" >> ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
+          sudo mkdir -p /srv/cache /srv/shared-git
+          sudo mount -t 9p cache /srv/cache || true
+          sudo mount -t 9p shared-git /srv/shared-git || true
+          df -h
+          mkdir -p ~/.yocto
+          echo 'SSTATE_MIRRORS = "file://.* file:///srv/cache/sstate-cache/PATH"' >> ~/.yocto/auto.conf
+          echo 'INHERIT += "own-mirrors"' >> ~/.yocto/auto.conf
+          echo 'SOURCE_MIRROR_URL = "http://10.0.2.2/downloads"' >> ~/.yocto/auto.conf
+          echo 'INHERIT += "rm_work"' >> ~/.yocto/auto.conf
+          # FIXME add OPKGBUILDCMD = 'opkg-build -Z gzip -a "-1n"'
       - name: Install required packages
         run: |
           sudo apt-get install diffstat
