--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,10 @@ on:
 jobs:
   build:
     name: meta-rauc Build
-    # running without sstate would take too long, so only run on the main repo or if BUILD_RUNS_ON is set
-    if: ${{ vars.BUILD_RUNS_ON || github.repository == 'pengutronix-test/meta-rauc' }}
-    runs-on: ${{ fromJSON(vars.BUILD_RUNS_ON || (github.repository == 'pengutronix-test/meta-rauc' && '["self-hosted", "forrest", "build"]'))}}
-    timeout-minutes: 720
+    #runs-on: ${{ fromJSON(vars.BUILD_RUNS_ON || (github.repository == 'pengutronix-test/meta-rauc' && '["self-hosted", "forrest", "build"]') || 'ubuntu-22.04') }}
+    runs-on: ${{ (vars.BUILD_RUNS_ON != ''  && fromJSON(vars.BUILD_RUNS_ON)) || 'ubuntu-22.04' }}
+    # abort if it seems that we're rebuilding too much
+    timeout-minutes: 120
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,8 +26,11 @@ jobs:
           source poky/oe-init-build-env build
           bitbake-layers add-layer ../meta-rauc
           cp ~/.yocto/auto.conf conf/ || true
+          echo 'BB_SIGNATURE_HANDLER = "OEBasicHash"' >> conf/local.conf
+          echo 'BB_HASHSERVE = ""' >> conf/local.conf
+          echo 'OPKGBUILDCMD = \'opkg-build -Z gzip -a "-1n"\' >> conf/local.conf
           echo 'DISTRO_FEATURES:remove = "alsa bluetooth usbgadget usbhost wifi nfs zeroconf pci 3g nfc x11 opengl ptest wayland vulkan"' >> conf/local.conf
-          echo 'BB_GENERATE_MIRROR_TARBALLS = "1"' >> conf/local.conf
+          echo 'SSTATE_MIRRORS = "file://.* https://github-runner.pengutronix.de/sstate-cache/PATH"' >> conf/local.conf
       #- name: Build rauc, rauc-native
       #  run: |
       #    source poky/oe-init-build-env build
