--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: >-
       ${{
         (vars.BUILD_RUNS_ON != ''  && fromJSON(vars.BUILD_RUNS_ON)) ||
-        (github.repository == 'rauc/meta-rauc' && fromJSON('["self-hosted", "forrest", "build"]')) ||
+        (github.repository == 'pengutronix-test/meta-rauc' && fromJSON('["self-hosted", "forrest", "build"]')) ||
         'ubuntu-20.04'
       }}
     # abort if it seems that we're rebuilding too much
